--- a/cmake/PackageConfig.cmake.in
+++ b/cmake/PackageConfig.cmake.in
@@ -22,7 +22,7 @@ find_dependency(bacio CONFIG)
 find_dependency(crtm CONFIG)
 find_dependency(g2 CONFIG)
 find_dependency(g2tmpl CONFIG)
-#find_dependency(ip CONFIG)
+find_dependency(ip CONFIG)
 
 # nceppost library does not depend on these, the executable does.
 #find_dependency(gfsio CONFIG)
