updating CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,8 +31,8 @@ if(NOT CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel|GNU|Clang|AppleClang)$")
 endif()
 
 find_package(MPI REQUIRED)
-find_package(NetCDF REQUIRED C Fortran)
-#find_package(NetCDF REQUIRED COMPONENTS Fortran)
+#find_package(NetCDF REQUIRED C Fortran)
+find_package(NetCDF REQUIRED COMPONENTS Fortran)
 
 if(OPENMP)
   find_package(OpenMP REQUIRED COMPONENTS Fortran)
@@ -48,10 +48,10 @@ find_package(bacio REQUIRED)
 find_package(crtm REQUIRED)
 find_package(g2 REQUIRED)
 find_package(g2tmpl REQUIRED)
+find_package(ip REQUIRED)
 
 if(BUILD_POSTEXEC)
   find_package(nemsio REQUIRED)
-  find_package(ip REQUIRED)
   find_package(sfcio REQUIRED)
   find_package(sigio REQUIRED)
   find_package(sp REQUIRED)
